Intermittent dom/media/tests/mochitest/test_peerConnection_restartIceNoBundle.html | iceconnectionstate event 'failed' matches expected state 'checking' - got "failed", expected "checking"
Categories
(Core :: WebRTC: Networking, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | wontfix |
| firefox69 | --- | wontfix |
| firefox70 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: bwc)
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
| Comment hidden (Intermittent Failures Robot) |
Comment 2•7 years ago
|
||
Comment 3•7 years ago
|
||
Recent log failure:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=230560951&repo=autoland&lineNumber=44370
| Comment hidden (Intermittent Failures Robot) |
Comment 5•7 years ago
|
||
Comment 6•6 years ago
|
||
Recent log:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=245263719&repo=autoland&lineNumber=52201
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 13•6 years ago
|
||
It looks like our grace period timer is not being reset when we restart ICE, which is busted. Trying to determine how to fix.
| Assignee | ||
Comment 14•6 years ago
|
||
It looks like when ICE completes, the grace period timer keeps running, and when we start ICE again (but don't have pairs yet), we don't extend it. I think the most sensible thing to do is disable the grace period timer when ICE completes, and when we're about to start ICE again (we may restart the timer if there are pairs, but if not the timer will not be running).
| Assignee | ||
Comment 15•6 years ago
|
||
| Assignee | ||
Comment 16•6 years ago
|
||
| Assignee | ||
Comment 17•6 years ago
|
||
Try looks ok so far. Check back on retriggers.
Comment 19•6 years ago
|
||
Comment 20•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Description
•