Bug 1513464: Unset the grace period timer when we start ICE, and when ICE completes. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D37322